# docketbird-mcp

./: .dockerignore  .env.example  .gitignore  DOCKETBIRD_API_BUG_REPORT.md  Dockerfile  LICENSE  README.md  auth_provider.py  docketbird_mcp.py  pyproject.toml  requirements.txt
.claude/skills/matteo/: SKILL.md
.github/workflows/: deploy.yml  test.yml
docs/: ARCHITECTURE.md  CONNECTING.md
scripts/: local_probe.py
skills/docketbird-mcp/: SKILL.md
skills/docketbird-mcp/references/: tools-reference.md
tests/: conftest.py  diagnose_docketbird.py  test_asgi_app.py  test_auth_db.py  test_auth_provider.py  test_change_api_key.py  test_change_password.py  test_downloads.py  test_health.py  test_helpers.py  test_login_flow.py  test_security.py  test_service_token.py  test_tools.py
