[project]
name = "docketbird-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.18.0",
    "httpx==0.28.1",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.7",
    "termcolor==2.5.0",
    "starlette==0.48.0",
    "aiosqlite==0.20.0",
    "bcrypt==4.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.14.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".claude"]  # vendored skill scripts, not project source

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # long lines exist in HTML templates and tool docstrings
